--- a/Source/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/Source/DataBoss.Specs/DataBoss.Specs.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\DataBoss.Testing.SqlServer\DataBoss.Testing.SqlServer.csproj" />
     <PackageReference Include="Check.That" Version="0.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
