--- a/Source/DataBoss.Data/DataBoss.Data.csproj
+++ b/Source/DataBoss.Data/DataBoss.Data.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netstandard2.1;netstandard2.0;net472;net452</TargetFrameworks>
+    <TargetFrameworks>net6.0;net5.0;netstandard2.1;netstandard2.0;net472;net452</TargetFrameworks>
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
