--- a/Source/DataBoss.Migrations/DataBoss.Migrations.csproj
+++ b/Source/DataBoss.Migrations/DataBoss.Migrations.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net452;net472;netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net5.0;netstandard2.1;netstandard2.0;net472;net452</TargetFrameworks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
