--- a/Source/DataBoss.Data.Npgsql.Specs/DataBoss.Data.Npgsql.Specs.csproj
+++ b/Source/DataBoss.Data.Npgsql.Specs/DataBoss.Data.Npgsql.Specs.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataBoss.Data.Npgsql\DataBoss.Data.Npgsql.csproj" />
     <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj" />
+    <ProjectReference Include="..\DataBoss.Specs\DataBoss.Specs.csproj" />
   </ItemGroup>
 
 </Project>
