--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -10,9 +10,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
     <VersionPrefix>0.0.104</VersionPrefix>
-    <VersionSuffix>beta.1</VersionSuffix>
+	<!--VersionSuffix>beta.1</VersionSuffix-->
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
     <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
-    <AssemblyFileVersion>2022.09.26</AssemblyFileVersion>
+    <AssemblyFileVersion>2022.11.08</AssemblyFileVersion>
   </PropertyGroup>
 </Project>
