--- a/Source/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/Source/DataBoss.Specs/DataBoss.Specs.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\DataBoss.Data.SqlClient\DataBoss.Data.SqlClient.csproj" />
     <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj" />
     <ProjectReference Include="..\DataBoss.PowerArgs\DataBoss.PowerArgs.csproj" />
+    <ProjectReference Include="..\DataBoss.Uuid\DataBoss.Uuid.csproj" />
     <ProjectReference Include="..\DataBoss\DataBoss.csproj" />
     <ProjectReference Include="..\DataBoss.Testing.SqlServer\DataBoss.Testing.SqlServer.csproj" />
     <PackageReference Include="Check.That" Version="0.0.4" />
