--- a/Source/DataBoss.Data.Npgsql.Specs/DataBoss.Data.Npgsql.Specs.csproj
+++ b/Source/DataBoss.Data.Npgsql.Specs/DataBoss.Data.Npgsql.Specs.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Check.That" Version="0.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     <PackageReference Include="Npgsql" Version="7.0.0" />
+    <PackageReference Include="Testcontainers.PostgreSql" Version="3.5.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
